--- a/VhallAndroidSDKLiveDemo/app/src/main/res/values/strings.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/res/values/strings.xml
@@ -10,11 +10,13 @@
     <string name="logoff">退出登录</string>
     <string name="app_set">参数设置</string>
     <string name="app_title_hint">使用聊天、问答等功能必须登录</string>
-    <string name="app_settings_str_broadcast">直播设置</string>
-    <string name="app_settings_str_watch">观看直播/回放</string>
+    <string name="app_settings_str_broadcast">主持人发直播设置</string>
+    <string name="app_settings_str_watch">观看直播/回放、嘉宾加入直播</string>
     <string name="app_settings_string_token">直播Token</string>
     <string name="app_settings_string_id">活动ID</string>
-    <string name="app_settings_string_name">主播昵称</string>
+    <string name="app_settings_string_guest_pwd">嘉宾口令</string>
+    <string name="app_settings_string_guest_avatar">嘉宾头像</string>
+    <string name="app_settings_string_name">加入直播昵称</string>
     <string name="app_settings_string_dp">分辨率</string>
     <string name="app_settings_string_code">视频码率(kbps)</string>
     <string name="app_settings_string_framerate">视频帧率(fps)</string>
@@ -38,6 +40,6 @@
     <string name="app_login_hint">请输入用户名</string>
     <string name="app_head_url_hint">请输入头像地址网络地址(非必填)</string>
     <string name="app_id_hint">请输入三方ID</string>
-    <string name="app_please_input_rtc_id">请输入互动房间id</string>
+    <string name="app_please_input_rtc_id" >请输入互动房间id</string>
 
 </resources>
