--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/strings.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/strings.xml
@@ -48,4 +48,10 @@
     <string name="sure">确定</string>
     <string name="vhall_no_member">暂时没有成员列表</string>
     <string name="vhall_forbit_member">暂时没有禁言或踢出成员</string>
+
+    <string name="choose_camera_stand">选择推流机位</string>
+
+    <string name="live_director">以视频推流形式推流到云导播</string>
+    <string name="live_host">以主持人身份发起直播</string>
+
 </resources>
