--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/strings.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
 
     <string name="start_broadcast">开始直播</string>
     <string name="start_dress_rehearsal">开始彩排</string>
+    <string name="start_re_push">重新推流</string>
     <string name="sure">确定</string>
 </resources>
